[gd_scene load_steps=9 format=3 uid="uid://wmlp2vs2rymx"]

[ext_resource type="Script" uid="uid://vgvclyomd73d" path="res://scripts/tests/test_combat_reload.gd" id="1_script"]
[ext_resource type="Script" uid="uid://dg2obkxmhp4v2" path="res://scripts/tests/orbit_camera.gd" id="2_orbit_camera"]
[ext_resource type="PackedScene" uid="uid://bqh2ldrdfsiha" path="res://assets/characters/vanguard/vanguard.glb" id="3_character"]
[ext_resource type="Script" uid="uid://dg33nhpmacdpl" path="res://scripts/characters/character_base.gd" id="4_character_base"]
[ext_resource type="Script" uid="uid://jawpkvf324ja" path="res://scripts/characters/components/combat_component.gd" id="5_combat_component"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_char"]
radius = 0.3
height = 1.8

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.35, 0.4, 1)
ambient_light_source = 2
ambient_light_color = Color(0.7, 0.7, 0.75, 1)
ambient_light_energy = 0.6

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(50, 0.2, 50)

[node name="TestCombatReload" type="Node3D"]
script = ExtResource("1_script")

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_mask = 3
script = ExtResource("4_character_base")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
shape = SubResource("CapsuleShape3D_char")

[node name="CharacterModel" parent="Player" instance=ExtResource("3_character")]

[node name="CombatComponent" type="Node" parent="Player"]
script = ExtResource("5_combat_component")

[node name="Enemy" type="CharacterBody3D" parent="." groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
collision_mask = 3
script = ExtResource("4_character_base")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
shape = SubResource("CapsuleShape3D_char")

[node name="CharacterModel" parent="Enemy" instance=ExtResource("3_character")]

[node name="CombatComponent" type="Node" parent="Enemy"]
script = ExtResource("5_combat_component")

[node name="OrbitCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 6)
fov = 50.0
script = ExtResource("2_orbit_camera")
distance = 12.0
initial_vertical_angle = 75.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 10, 20, 10)
shadow_enabled = true
shadow_bias = 0.03
shadow_normal_bias = 1.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="AmmoLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 24
text = "Ammo: -- / --"
